# agentic-ai-trading

./: .gitignore  DEPLOYMENT.md  FRONTEND_SETUP.md  README.md  api_server.py  deploy.sh  main.py  pyproject.toml
.github/workflows/: deploy.yml
account_actions/: close_order.py  create_order.py  get_open_position.py  get_portfolio.py
agent/: __init__.py  builder.py  edges.py  nodes.py  state.py  tools.py
client/: binance_client.py
database/: __init__.py  models.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: PortfolioChart.js
llm/: __init__.py  model.py
prompts/: trading_prompt.py
utils/: calculations.py  stock_data.py
